--- a/web/package.json
+++ b/web/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "graphql": "^15.5.0",
     "next": "latest",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "urql": "^2.0.2"
   },
   "devDependencies": {
     "@tailwindcss/custom-forms": "^0.2.1",
