--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/bluebird": "3.5.33",
     "@types/bson": "^4.0.3",
     "@types/connect-redis": "^0.0.14",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.0",
     "@types/node": "^14.14.37",
@@ -35,6 +36,7 @@
     "bluebird": "^3.7.2",
     "bson": "^4.2.3",
     "connect-redis": "^5.1.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.5.0",
